--- a/benchmarks/ibaqpy-batch-correction-example.ipynb
+++ b/benchmarks/ibaqpy-batch-correction-example.ipynb
@@ -28,14 +28,13 @@
     "# Import the required modules and functions\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from ibaqpy.ibaq.ibaqpy_postprocessing import (combine_ibaq_tsv_files,\n",
-    "                                               pivot_wider,\n",
-    "                                               pivot_longer)\n",
+    "from ibaqpy.ibaq.ibaqpy_postprocessing import combine_ibaq_tsv_files, pivot_wider, pivot_longer\n",
     "from ibaqpy.ibaq.utils import apply_batch_correction\n",
     "\n",
     "# ignore warnings for this example and make output less verbose\n",
     "# comment these lines to see the warnings\n",
     "import warnings\n",
+    "\n",
     "warnings.filterwarnings(\"ignore\")"
    ],
    "id": "initial_id",
@@ -68,10 +67,7 @@
     "file_pattern = \"*ibaq.tsv\"\n",
     "\n",
     "# Load the data\n",
-    "df_ibaq = combine_ibaq_tsv_files(data_dir,\n",
-    "                                 pattern=file_pattern,\n",
-    "                                 comment=\"#\",\n",
-    "                                 sep=\"\\t\")"
+    "df_ibaq = combine_ibaq_tsv_files(data_dir, pattern=file_pattern, comment=\"#\", sep=\"\\t\")"
    ],
    "outputs": [],
    "execution_count": 2
@@ -269,11 +265,9 @@
    },
    "source": [
     "# reshape data long to wide format\n",
-    "df_wide = pivot_wider(df_ibaq,\n",
-    "                  row_name=\"ProteinName\",\n",
-    "                  col_name=\"SampleID\",\n",
-    "                  values=\"Ibaq\",\n",
-    "                  fillna=True)\n",
+    "df_wide = pivot_wider(\n",
+    "    df_ibaq, row_name=\"ProteinName\", col_name=\"SampleID\", values=\"Ibaq\", fillna=True\n",
+    ")\n",
     "\n",
     "# view\n",
     "df_wide.iloc[:5, :5]"
@@ -409,7 +403,7 @@
     "# In this example, the batch information can be extracted directly from the sample names.\n",
     "# The sample names are in the format: project-sample-id.\n",
     "\n",
-    "batch_ids = df_wide.columns.str.split('-').str[0]\n",
+    "batch_ids = df_wide.columns.str.split(\"-\").str[0]\n",
     "batch_ids = pd.factorize(batch_ids)[0]\n",
     "print(batch_ids)"
    ],
@@ -446,9 +440,7 @@
    },
    "source": [
     "# Run batch correction\n",
-    "df_corrected = apply_batch_correction(df_wide,\n",
-    "                                      list(batch_ids),\n",
-    "                                      kwargs={})\n",
+    "df_corrected = apply_batch_correction(df_wide, list(batch_ids), kwargs={})\n",
     "\n",
     "# view\n",
     "df_corrected.iloc[:5, :5]"
@@ -605,10 +597,9 @@
    },
    "source": [
     "# reshape data wide to long format\n",
-    "df_long = pivot_longer(df_corrected,\n",
-    "                       row_name=\"ProteinName\",\n",
-    "                       col_name=\"SampleID\",\n",
-    "                       values=\"Ibaq_corrected\")\n",
+    "df_long = pivot_longer(\n",
+    "    df_corrected, row_name=\"ProteinName\", col_name=\"SampleID\", values=\"Ibaq_corrected\"\n",
+    ")\n",
     "\n",
     "# view\n",
     "df_long.head()"
@@ -710,20 +701,24 @@
     "# Define a function to generate a boxplot for protein expression distribution per sample\n",
     "import matplotlib.pyplot as plt\n",
     "import logging\n",
-    "logging.getLogger('matplotlib').setLevel(logging.ERROR)\n",
     "\n",
-    "def generate_boxplot(df,\n",
-    "                     x='SampleID',\n",
-    "                     y='ibaQ',\n",
-    "                     hue='Project',\n",
-    "                     project_colors_hex=None,\n",
-    "                     title='Protein expression distribution per sample',\n",
-    "                     xlabel='Samples',\n",
-    "                     ylabel='iBAQ',\n",
-    "                     save_path=None,\n",
-    "                     figsize=(15, 8),\n",
-    "                     rotation=45,\n",
-    "                     dpi=300):\n",
+    "logging.getLogger(\"matplotlib\").setLevel(logging.ERROR)\n",
+    "\n",
+    "\n",
+    "def generate_boxplot(\n",
+    "    df,\n",
+    "    x=\"SampleID\",\n",
+    "    y=\"ibaQ\",\n",
+    "    hue=\"Project\",\n",
+    "    project_colors_hex=None,\n",
+    "    title=\"Protein expression distribution per sample\",\n",
+    "    xlabel=\"Samples\",\n",
+    "    ylabel=\"iBAQ\",\n",
+    "    save_path=None,\n",
+    "    figsize=(15, 8),\n",
+    "    rotation=45,\n",
+    "    dpi=300,\n",
+    "):\n",
     "    \"\"\"\n",
     "    Generate a box plot for protein expression distribution per sample.\n",
     "\n",
@@ -769,18 +764,20 @@
     "        positions.append(pos)\n",
     "\n",
     "        # Plot the boxplot for this sample at the specified position.\n",
-    "        box = plt.boxplot(sample_data,\n",
-    "                          positions=[pos],\n",
-    "                          widths=0.4,\n",
-    "                          patch_artist=True,\n",
-    "                          flierprops=dict(marker='o', markersize=3))\n",
+    "        box = plt.boxplot(\n",
+    "            sample_data,\n",
+    "            positions=[pos],\n",
+    "            widths=0.4,\n",
+    "            patch_artist=True,\n",
+    "            flierprops=dict(marker=\"o\", markersize=3),\n",
+    "        )\n",
     "\n",
     "        # Set the face color of the box based on the project's color if a mapping is provided.\n",
     "        # If no mapping is provided or the project is not found in the dictionary, the default color is used.\n",
     "        if project_colors_hex:\n",
     "            color = project_colors_hex.get(project)\n",
     "            if color:  # Only set the color if a valid one was found\n",
-    "                for patch in box['boxes']:\n",
+    "                for patch in box[\"boxes\"]:\n",
     "                    patch.set_facecolor(color)\n",
     "\n",
     "    # Set plot title and axis labels\n",
@@ -817,31 +814,33 @@
     "\n",
     "# Add project information to the corrected dataset\n",
     "# from the SampleID column\n",
-    "df_ibaq['Project'] = df_ibaq['SampleID'].str.split('-').str[0]\n",
+    "df_ibaq[\"Project\"] = df_ibaq[\"SampleID\"].str.split(\"-\").str[0]\n",
     "\n",
     "# transform ibaq values to log scale\n",
-    "df_ibaq['Ibaq_log'] = np.log10(df_ibaq['Ibaq'] + 10)\n",
+    "df_ibaq[\"Ibaq_log\"] = np.log10(df_ibaq[\"Ibaq\"] + 10)\n",
     "\n",
     "# Define project colors\n",
     "project_colors_map = {\n",
-    "    'PXD000396': '#ff7f0e',\n",
-    "    'PXD005481': '#d62728',\n",
-    "    'PXD039414': '#f7b6d2',\n",
+    "    \"PXD000396\": \"#ff7f0e\",\n",
+    "    \"PXD005481\": \"#d62728\",\n",
+    "    \"PXD039414\": \"#f7b6d2\",\n",
     "}\n",
     "\n",
     "\n",
-    "generate_boxplot(df_ibaq,\n",
-    "                    x='SampleID',\n",
-    "                    y='Ibaq_log',\n",
-    "                    hue='Project',\n",
-    "                    project_colors_hex=project_colors_map,\n",
-    "                    title='Protein expression distribution per sample',\n",
-    "                    xlabel='Samples',\n",
-    "                    ylabel='log(iBAQ raw)',\n",
-    "                    save_path='../data/ibaq-raw-hela/boxplot-raw.png',\n",
-    "                    figsize=(15, 8),\n",
-    "                    rotation=45,\n",
-    "                    dpi=300);"
+    "generate_boxplot(\n",
+    "    df_ibaq,\n",
+    "    x=\"SampleID\",\n",
+    "    y=\"Ibaq_log\",\n",
+    "    hue=\"Project\",\n",
+    "    project_colors_hex=project_colors_map,\n",
+    "    title=\"Protein expression distribution per sample\",\n",
+    "    xlabel=\"Samples\",\n",
+    "    ylabel=\"log(iBAQ raw)\",\n",
+    "    save_path=\"../data/ibaq-raw-hela/boxplot-raw.png\",\n",
+    "    figsize=(15, 8),\n",
+    "    rotation=45,\n",
+    "    dpi=300,\n",
+    ");"
    ],
    "outputs": [
     {
@@ -872,23 +871,25 @@
     "\n",
     "# Add project information to the corrected dataset\n",
     "# from the SampleID column\n",
-    "df_long['Project'] = df_long['SampleID'].str.split('-').str[0]\n",
+    "df_long[\"Project\"] = df_long[\"SampleID\"].str.split(\"-\").str[0]\n",
     "\n",
     "# transform ibaq values to log scale\n",
-    "df_long['Ibaq_log'] = np.log10(df_long['Ibaq_corrected'] + 10)\n",
+    "df_long[\"Ibaq_log\"] = np.log10(df_long[\"Ibaq_corrected\"] + 10)\n",
     "\n",
-    "generate_boxplot(df_long,\n",
-    "                 x='SampleID',\n",
-    "                 y='Ibaq_log',\n",
-    "                 hue='Project',\n",
-    "                 project_colors_hex=project_colors_map,\n",
-    "                 title='Protein expression distribution per sample',\n",
-    "                 xlabel='Samples',\n",
-    "                 ylabel='log(iBAQ corrected)',\n",
-    "                 save_path='../data/ibaq-raw-hela/boxplot.png',\n",
-    "                 figsize=(15, 8),\n",
-    "                 rotation=45,\n",
-    "                 dpi=300);"
+    "generate_boxplot(\n",
+    "    df_long,\n",
+    "    x=\"SampleID\",\n",
+    "    y=\"Ibaq_log\",\n",
+    "    hue=\"Project\",\n",
+    "    project_colors_hex=project_colors_map,\n",
+    "    title=\"Protein expression distribution per sample\",\n",
+    "    xlabel=\"Samples\",\n",
+    "    ylabel=\"log(iBAQ corrected)\",\n",
+    "    save_path=\"../data/ibaq-raw-hela/boxplot.png\",\n",
+    "    figsize=(15, 8),\n",
+    "    rotation=45,\n",
+    "    dpi=300,\n",
+    ");"
    ],
    "outputs": [
     {
